--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   </script>
   <script type="text/javascript" src='decomp.min.js' ) }}></script>
 
-  <!-- <script type="text/javascript" src='vertices_data.js' ) }}></script> -->
+  <script type="text/javascript" src='vertices_data.js' ) }}></script>
   <!-- <script type="text/javascript" src='vertices_editor.js' ) }}></script> -->
   <!-- <script type="text/javascript" src='interactive.js' ) }}></script> -->
   <!-- <script type="text/javascript" src='utils.js' ) }}></script> -->
-  <!-- <script type="text/javascript" src='Origin.js' ) }}></script> -->
-  <!-- <script type="text/javascript" src='Particle.js' ) }}></script> -->
+  <script type="text/javascript" src='Origin.js' ) }}></script>
+  <script type="text/javascript" src='Particle.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
 
   <link type="text/css" rel="stylesheet" href="styles.css">
