--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>oida</title>
+  <title>Generative painting</title>
   <meta name="description" content="no idea">
   <meta name="author" content="Stefan Schwaha">
 
-  <meta property="og:title" content="oida">
+  <meta property="og:title" content="Generative painting">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://digitalitility.com">
-  <meta property="og:description" content="nopsy">
-  <meta property="og:image" content="thumbnail_detail.gif">
+  <meta property="og:description" content="Get a drink and watch the painting.">
+  <meta property="og:image" content="thumbnail.gif">
 
   <link rel="icon" href="favicon.ico">
 
@@ -27,9 +27,8 @@
   </script>
   <script type="text/javascript" src='decomp.min.js' ) }}></script>
 
-  <!-- <script type="text/javascript" src='vertices_editor.js' ) }}></script> -->
-  <!-- <script type="text/javascript" src='interactive.js' ) }}></script> -->
-  <!-- <script type="text/javascript" src='utils.js' ) }}></script> -->
+  <script type="text/javascript" src='interactive.js' ) }}></script>
+  <script type="text/javascript" src='utils.js' ) }}></script>
   <script type="text/javascript" src='Origin.js' ) }}></script>
   <script type="text/javascript" src='Particle.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
