--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <script type="text/javascript" src='utils.js' ) }}></script>
   <script type="text/javascript" src='Origin.js' ) }}></script>
   <script type="text/javascript" src='Particle.js' ) }}></script>
+  <script type="text/javascript" src='Strokes.js' ) }}></script>
+  <script type="text/javascript" src='Bubbles.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
 
   <link type="text/css" rel="stylesheet" href="styles.css">
