added randomness in color

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
   <script type="text/javascript" src='Particle.js' ) }}></script>
   <script type="text/javascript" src='Strokes.js' ) }}></script>
   <script type="text/javascript" src='Bubbles.js' ) }}></script>
+  <script type="text/javascript" src='Areas.js' ) }}></script>
   <script type="text/javascript" src='sketch.js' ) }}></script>
 
   <link type="text/css" rel="stylesheet" href="styles.css">
