--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Generative painting</title>
-  <meta name="description" content="no idea">
+  <meta name="description" content="Painting created with p5.js and matter.js.">
   <meta name="author" content="Stefan Schwaha">
 
   <meta property="og:title" content="Generative painting">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://digitalitility.com">
-  <meta property="og:description" content="Get a drink and watch the painting.">
+  <meta property="og:description" content="Painting created with p5.js and matter.js.">
   <meta property="og:image" content="thumbnail.gif">
 
   <link rel="icon" href="favicon.ico">
